Add box-shadow styling to tweets

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             prependNewTweet(tweetInfo);
           }
           numTweets = streams.home.length;
-
+          $('.tweet').removeClass('orange_border');
           $('.tweet:odd').toggleClass('orange_border');
         });
 
