Implement removal of extra timeline <h2>
Bug: Multiple click event handlers are getting assigned to each userName
whenever the update button is clicked. This results in multiple
<h2>s getting prepended whenever a username is clicked.
This is not a good fix, but will work for now.

--- a/index.html
+++ b/index.html
@@ -98,13 +98,16 @@
             // Hide all tweets first
             $('.tweet').hide();
 
-            // Prepend <h2> for Timeline
-            var $timeline =
             // Show the tweets that have the correct name
             $('.userName')
               .filter(function(index) {
                 return $(this).text() == $($this).text();
-              }).closest('.tweet').removeClass('orange_border').show();
+              }).closest('.tweet')
+              .removeClass('orange_border')
+              .show();
+
+            // Add timeline <h2>
+            $('.timeline').remove();
             $('.tweets').prepend($('<div class="timeline"><h2>' + $($this).text() + '\'s Timeline</h2></div>'));
 
           });
